# m5stack_matter_examples

./: .gitmodules  README.md  README_en.md
docker/: 0001-Add-NanoC6-support.patch  Dockerfile  Makefile  docker.mk
matter/: .gitignore
matter/air_quality/: CMakeLists.txt  Makefile  sdkconfig.defaults.esp32c6
matter/air_quality/main/: CMakeLists.txt  app_main.cpp
matter/air_quality/main/drivers/: epd.cpp  epd.h
matter/controller/: .gitignore  package.json  tsconfig.json
matter/controller/src/: index.ts  tsconfig.json
matter/sleepy_device/: CMakeLists.txt  Makefile  README.md
matter/sleepy_device/main/: CMakeLists.txt  app_main.cpp
matter/sleepy_device/main/lp_core/: main.c
openthread/: .gitignore
openthread/ot_br/: partitions.csv  sdkconfig.defaults.coex  sdkconfig.defaults.esp32c6
openthread/ot_br/main/: esp_ot_config.h
openthread/ot_rcp/: sdkconfig.defaults
script/: pack_firmware.py
